<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usecases.animal.AnimalFragment">

    <ProgressBar
        android:id="@+id/progress_bar_animal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/linear_layout_margin_top"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/linearLayoutCompat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/add_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            app:backgroundTint="@color/green"
                            app:tint="#FFFFFF"
                            android:src="@drawable/ic_add"
                            android:layout_gravity="center"/>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/add_animal_id_til"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/animal_id"
                            android:layout_gravity="center">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="120dp"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:layout_gravity="center"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/animal_search_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:text="@string/search"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:backgroundTint="@color/blue"/>
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </LinearLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/animal_information_Linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/information"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cantidad_partos"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <TextView
                        android:id="@+id/tv_cantidad_partos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:text="2"
                        android:textSize="20sp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/peso"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <TextView
                        android:id="@+id/tv_peso"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:text="2"
                        android:textSize="20sp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/herd_id_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <TextView
                        android:id="@+id/tv_herd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:text="2"
                        android:textSize="20sp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ultimo_bcs"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <TextView
                        android:id="@+id/tv_last_bcs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:text="2"
                        android:textSize="20sp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fecha_nacimiento"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <TextView
                        android:id="@+id/tv_fecha_nacimiento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:text="2"
                        android:textSize="20sp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ultima_fecha_parto"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <TextView
                        android:id="@+id/tv_ultima_fecha_parto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:text="2"
                        android:textSize="20sp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/config_alert"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/animal_bcs_min_til"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="bcs min"
                        android:layout_marginStart="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:layout_gravity="center"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/animal_bcs_max_til"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="bcs max"
                        android:layout_marginStart="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:layout_gravity="center"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <ProgressBar
                    android:id="@+id/animal_alert_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"/>

                <Button
                    android:id="@+id/animal_alert_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_title"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/red"/>
            </androidx.appcompat.widget.LinearLayoutCompat>


<!--            <Button
                android:id="@+id/add_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_animal"
                android:backgroundTint="@color/green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/animal_information_Linear_layout"/>
 -->       </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>